distinguish between owning and wanting an item

--- a/app/stylesheets/items/_show.sass
+++ b/app/stylesheets/items/_show.sass
@@ -63,25 +63,23 @@ body.items-show
     height: 16px
     width: 16px
 
-  #closet-hanger-form
+  #closet-hangers
     border: 1px solid $module-border-color
     float: right
     font-size: 85%
-    padding: 1em .5em .5em
+    padding: 1em
     width: 18em
 
     label, header
       display: block
       font-weight: bold
 
+    header
+      font-size: 125%
+
+    form
+      padding: .5em 0
+
     input[type=number]
       width: 4em
-
-    #closet-hanger-form-your-items
-      display: block
-      margin-top: .5em
-      text-align: right
-
-    p
-      font-family: $main-font
 
