--- a/app/views/items/_item_link.html.haml
+++ b/app/views/items/_item_link.html.haml
@@ -2,5 +2,5 @@
   = image_tag item.thumbnail_url, :alt => item.description, :title => item.description
   = item.name
   = nc_icon_for(item)
-  = closeted_icon_for(item)
+  = closeted_icons_for(item)
 
