wardrobe now works with owned/wanted

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -315,7 +315,7 @@ body.outfits-edit
       +inline-block
       &[type=submit]
         margin-right: 2em
-  #preview-search-form-your-items
+  .preview-search-form-your-items
     display: none
     font-size: 85%
     margin-right: 1em
@@ -563,7 +563,7 @@ body.outfits-edit
           display: block
         #save-outfit, #save-current-outfit, #save-outfit-copy, #current-outfit-permalink, #shared-outfit-permalink, #share-outfit, #shared-outfit-url
           display: none
-    #preview-search-form-your-items
+    .preview-search-form-your-items
       +inline-block
 
   &.user-not-signed-in
