Your Items page aware of wanting items

--- a/app/stylesheets/closet_hangers/_index.sass
+++ b/app/stylesheets/closet_hangers/_index.sass
@@ -99,6 +99,18 @@ body.closet_hangers-index
       form
         display: none
 
+  h3
+    border-bottom: 1px solid $soft-border-color
+    cursor: pointer
+    font-size: 250%
+    margin-bottom: .25em
+    padding: .25em 0
+
+  .closet-hangers-group
+    border-top: 1px solid $module-border-color
+    margin-bottom: 2em
+    padding-bottom: 1em
+
   &.current-user
     #closet-hangers
       .object:hover
